# SenGL

./: .gitignore  CMakeLists.txt  README.md
examples/: test.cpp
include/: SenGL.hpp
src/: SenGL.cpp
